Fix Java thread names on Android.

To get correct thread names in Chrome tracing, it's necessary to register
threads with the base::ThreadIdNameManager and set the thread name.

BUG=873377

Change-Id: Icb8d68f941f95f65c53ae19b16e05f0d85c9bfbd
Reviewed-on: https://chromium-review.googlesource.com/1192589
Reviewed-by: Yaron Friedman <yfriedman@chromium.org>
Commit-Queue: Victor Miura <vmiura@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587242}
Former-commit-id: 29bb4ab60c65fce9b311562e77c2d8d87f233b76