content/browser/android/launcher_thread.cc
@@ -18,8 +18,9 @@ base::MessageLoop* LauncherThread::GetMessageLoop() {
 }
 
 LauncherThread::LauncherThread()
-    : java_handler_thread_(Java_LauncherThread_getHandlerThread(
-          base::android::AttachCurrentThread())) {
+    : java_handler_thread_(nullptr,
+                           Java_LauncherThread_getHandlerThread(
+                               base::android::AttachCurrentThread())) {
   java_handler_thread_.Start();
 }
 
